Update project to 1.21.1