@@ -4,9 +4,10 @@ import com.stalemated.sts.resize.TooltipDimensionManager;
 import com.stalemated.sts.resize.enforce.TooltipEnforcerRegistry;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.tooltip.TooltipComponent;
-import net.minecraft.client.item.TooltipContext;
+import net.minecraft.item.Item.TooltipContext;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.ItemStack;
+import net.minecraft.item.tooltip.TooltipType;
 import net.minecraft.text.Text;
 
 import java.util.List;
@@ -30,12 +31,13 @@ public class EmiCompat {
                 if (stack != null && !stack.isEmpty()) {
                     MinecraftClient client = MinecraftClient.getInstance();
                     PlayerEntity player = client.player;
-                    TooltipContext context = client.options.advancedItemTooltips ? TooltipContext.Default.ADVANCED : TooltipContext.Default.BASIC;
+                    TooltipContext context = TooltipContext.DEFAULT;
+                    TooltipType tooltipType = client.options.advancedItemTooltips ? TooltipType.Default.ADVANCED : TooltipType.Default.BASIC;
                     
                     try {
-                        List<Text> texts = stack.getTooltip(player, context);
+                        List<Text> texts = stack.getTooltip(context, player, tooltipType);
                         if (!texts.isEmpty()) {
-                            TooltipDimensionManager.expectedTitleString = texts.get(0).getString().replace(" ", "");
+                            TooltipDimensionManager.expectedTitleString = texts.getFirst().getString().replace(" ", "");
                         }
                     } catch (Exception ignored) {}
                 }
